[package]
authors.workspace = true
description = "FRAME pallet for PolkaVM contracts."
edition.workspace = true
homepage.workspace = true
include = [ "CHANGELOG.md", "README.md", "build.rs", "src/**/*" ]
license = "Apache-2.0"
name = "pallet-revive"
readme = "README.md"
repository.workspace = true
version = "0.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
bitflags = { workspace = true }
codec = { features = [
	"derive",
	"max-encoded-len",
], workspace = true }
environmental = { workspace = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
polkavm = { version = "0.11.0", default-features = false }
rlp = { workspace = true }
scale-info = { features = [ "derive" ], workspace = true }
serde = { optional = true, features = [ "derive" ], workspace = true, default-features = true }

# Polkadot SDK Dependencies
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { optional = true, workspace = true }
pallet-revive-fixtures = { workspace = true, default-features = false }
pallet-revive-proc-macro = { workspace = true, default-features = true }
pallet-revive-uapi = { workspace = true, default-features = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true, default-features = true }
assert_matches = { workspace = true }
pallet-revive-fixtures = { workspace = true, default-features = true }
pretty_assertions = { workspace = true }
wat = { workspace = true }

# Polkadot SDK Dependencies
pallet-assets = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-message-queue = { workspace = true, default-features = true }
pallet-proxy = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
pallet-utility = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
xcm-builder = { workspace = true, default-features = true }

[features]
default = [ "std" ]
# enabling this feature will require having a riscv toolchain installed
# if no tests are ran and runtime benchmarks will not work
# apart from this the pallet will stay functional
riscv = [ "pallet-revive-fixtures/riscv" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
std = [
	"codec/std",
	"environmental/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances?/std",
	"pallet-proxy/std",
	"pallet-revive-fixtures/std",
	"pallet-timestamp/std",
	"pallet-utility/std",
	"polkavm/std",
	"rlp/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-utility/try-runtime",
	"sp-runtime/try-runtime",
]
