[package]
authors.workspace = true
description = "FRAME pallet for PolkaVM contracts."
edition.workspace = true
homepage.workspace = true
include = [ "CHANGELOG.md", "README.md", "build.rs", "src/**/*" ]
license = "Apache-2.0"
name = "pallet-revive"
readme = "README.md"
repository.workspace = true
version = "0.1.0"

#[lints]
#workspace = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
alloy-core = { version = "0.8.15", default-features = false, features = [ "sol-types" ] }
codec = { features = [ "derive", "max-encoded-len" ], workspace = true }
derive_more = { version = "0.99.17", default-features = false }
environmental = { version = "1.1.4", default-features = false }
ethereum-types = { version = "0.15.1", default-features = false, features = [ "codec", "rlp", "serialize" ] }
hex-literal = { workspace = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
num-bigint = { version = "0.4.3", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
paste = { version = "1.0.15", default-features = false }
polkavm = { version = "0.21.0", default-features = false }
polkavm-common = { version = "0.21.0", default-features = false, optional = true }
rand = { workspace = true, optional = true }
rand_pcg = { version = "0.3.1", optional = true }
rlp = { version = "0.6.1", default-features = false }
scale-info = { features = [ "derive" ], workspace = true }
serde = { features = [ "alloc", "derive" ], workspace = true, default-features = false }

# Polkadot SDK Dependencies
bn = { package = "substrate-bn", version = "0.6", default-features = false }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-revive-fixtures = { path = "fixtures", optional = true }
pallet-revive-proc-macro = { path = "proc-macro" }
pallet-revive-uapi = { path = "uapi", features = [ "scale" ] }
pallet-transaction-payment = { workspace = true }
ripemd = { version = "0.1.3", default-features = false }
sp-api = { workspace = true }
sp-arithmetic = { version = "26.1.0", default-features = false }
sp-consensus-aura = { workspace = true, optional = true }
sp-consensus-babe = { workspace = true, optional = true }
sp-consensus-slots = { version = "0.42.1", default-features = false, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
subxt-signer = { workspace = true, optional = true, features = [ "unstable-eth" ] }
xcm = { workspace = true }
xcm-builder = { workspace = true }

[dev-dependencies]
array-bytes = { version = "6.2.2", default-features = true }
assert_matches = { version = "1.5.0" }
polkavm-common = { version = "0.21.0" }
pretty_assertions = { version = "1.3.0" }
secp256k1 = { version = "0.28.0", default-features = false, features = [ "recovery" ] }
serde_json = { workspace = true }

# Polkadot SDK Dependencies
pallet-balances = { workspace = true, default-features = true }
pallet-proxy = { workspace = true, default-features = true }
pallet-revive-fixtures = { path = "fixtures", default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
pallet-utility = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-tracing = { version = "17.1.0", default-features = true }
xcm-builder = { workspace = true, default-features = true }

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-revive-fixtures",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"polkavm-common/alloc",
	"rand",
	"rand_pcg",
	"sp-consensus-aura",
	"sp-consensus-babe",
	"sp-consensus-slots",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
std = [
	"alloy-core/std",
	"codec/std",
	"environmental/std",
	"ethereum-types/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"num-bigint/std",
	"num-integer/std",
	"num-traits/std",
	"pallet-proxy/std",
	"pallet-revive-fixtures/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"polkavm-common?/std",
	"polkavm/std",
	"rand?/std",
	"ripemd/std",
	"rlp/std",
	"scale-info/std",
	"secp256k1/std",
	"serde/std",
	"serde_json/std",
	"sp-api/std",
	"sp-arithmetic/std",
	"sp-consensus-aura/std",
	"sp-consensus-babe/std",
	"sp-consensus-slots/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"subxt-signer",
	"xcm-builder/std",
	"xcm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-utility/try-runtime",
	"sp-runtime/try-runtime",
]
