[package]
build = "build.rs"
edition = "2021"
name = "pop-api-vnext-integration-tests"
version = "0.1.0"

[build-dependencies]
contract-build = { git = "https://github.com/use-ink/cargo-contract" }

[dev-dependencies]
codec.workspace = true
env_logger.workspace = true
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log.workspace = true
pallet-assets = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-revive = { workspace = true, default-features = false }
pop-api = { path = "../../pop-api", default-features = false, features = [
	"fungibles",
	"messaging",
	"nonfungibles",
] }
pop-primitives = { workspace = true, default-features = false }
pop-runtime-devnet.workspace = true
pop-runtime-testnet.workspace = true
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = [ "devnet", "std" ]
devnet = [ "pop-runtime-devnet/default" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-revive/std",
	"pop-api/std",
	"pop-primitives/std",
	"pop-runtime-devnet/std",
	"pop-runtime-testnet/std",
	"sp-io/std",
	"sp-runtime/std",
]
testnet = [ "pop-runtime-testnet/default" ]
