[package]
build = "build.rs"
edition = "2021"
name = "integration-tests"
version = "0.1.0"

[build-dependencies]
contract-build = "4.1.1"

[dev-dependencies]
env_logger = "0.11.2"
frame-support = { version = "38.0.0", default-features = false }
frame-support-procedural = { version = "30.0.3", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
log = "0.4.22"
pallet-assets = { version = "40.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-contracts = { version = "38.0.0", default-features = false }
pop-api = { path = "../../pop-api", default-features = false, features = [
	"fungibles",
] }
pop-primitives = { path = "../../primitives", default-features = false }
pop-runtime-devnet = { path = "../../runtime/devnet", default-features = false }
pop-runtime-testnet = { path = "../../runtime/testnet", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
sp-io = { version = "38.0.0", default-features = false }
sp-runtime = { version = "39.0.1", default-features = false }
staging-xcm = { version = "14.2.0", default-features = false }

[features]
default = [ "std" ]
devnet = [  ]
std = [
	"frame-support-procedural/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pop-api/std",
	"pop-primitives/std",
	"pop-runtime-devnet/std",
	"pop-runtime-testnet/std",
	"scale/std",
	"sp-io/std",
	"sp-runtime/std",
	"staging-xcm/std",
]
testnet = [  ]
