[package]
build = "build.rs"
edition = "2021"
name = "pop-api-integration-tests"
version = "0.1.0"

[build-dependencies]
contract-build.workspace = true

[dev-dependencies]
env_logger.workspace = true
log.workspace = true

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-contracts = { workspace = true, default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

pop-api = { path = "../../pop-api", default-features = false, features = [
	"fungibles",
] }
pop-primitives = { workspace = true, default-features = false }
pop-runtime-devnet.workspace = true
pop-runtime-testnet.workspace = true

[features]
default = [ "std" ]
devnet = [ "pop-runtime-devnet/default" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pop-api/std",
	"pop-primitives/std",
	"pop-runtime-devnet/std",
	"pop-runtime-testnet/std",
	"scale/std",
	"sp-io/std",
	"sp-runtime/std",
]
testnet = [ "pop-runtime-testnet/default" ]
