[package]
build = "build.rs"
edition = "2021"
name = "pop-api-integration-tests"
version = "0.1.0"

[build-dependencies]
contract-build.workspace = true

[dev-dependencies]
codec.workspace = true
env_logger.workspace = true
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
ismp = { workspace = true, default-features = false }
log.workspace = true
pallet-api = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-contracts = { workspace = true, default-features = false }
pallet-ismp = { workspace = true, default-features = false }
pallet-revive = { workspace = true, default-features = false }
pallet-timestamp ={ workspace = true, default-features = false}
pallet-nfts = { workspace = true, default-features = false }
pallet-xcm = { workspace = true, default-features = false }
pop-api = { path = "../../pop-api", default-features = false, features = [
	"fungibles",
	"messaging",
	"nonfungibles",
] }
pop-primitives = { workspace = true, default-features = false }
pop-runtime-devnet.workspace = true
pop-runtime-testnet.workspace = true
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
xcm.workspace = true
xcm-executor.workspace = true

[features]
default = [ "std" ]
devnet = [ "pop-runtime-devnet/default" ]

std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-api/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pallet-nfts/std",
	"pallet-timestamp/std",
	"pop-api/std",
	"pop-primitives/std",
	"pop-runtime-devnet/std",
	"pop-runtime-testnet/std",
	"sp-io/std",
	"sp-runtime/std",
]
testnet = [ "pop-runtime-testnet/default" ]
